# klips

./: .gitignore  README.md
cpp/: CMakeLists.txt  README.md
cpp/algorithms/: CMakeLists.txt
cpp/algorithms/graphs/: CMakeLists.txt
cpp/algorithms/graphs/object/: CMakeLists.txt  graph.cpp  lib-graph.cpp  lib-graph.hpp
cpp/algorithms/graphs/simple/: CMakeLists.txt  graph.cpp  lib-graph.cpp  lib-graph.hpp
cpp/algorithms/graphs/templated/: CMakeLists.txt  graph.cpp  lib-graph.cpp  lib-graph.hpp
cpp/algorithms/graphs/weighted/: CMakeLists.txt  graph.cpp  lib-graph.cpp  lib-graph.hpp
cpp/algorithms/sorting/: CMakeLists.txt
cpp/algorithms/sorting/bubble/: CMakeLists.txt  bubble-sort.cpp  lib-bubble.cpp  lib-bubble.hpp
cpp/algorithms/sorting/bucket/: CMakeLists.txt  bucket-sort.cpp  lib-bucket.cpp  lib-bucket.hpp
cpp/algorithms/sorting/count/: CMakeLists.txt  counting-sort.cpp  lib-counting.cpp  lib-counting.hpp
cpp/algorithms/sorting/heap/: CMakeLists.txt  heap-sort.cpp  lib-heap.cpp  lib-heap.hpp
cpp/algorithms/sorting/insertion/: CMakeLists.txt  insertion-sort.cpp  lib-insertion.cpp  lib-insertion.hpp
cpp/algorithms/sorting/merge/: CMakeLists.txt  lib-merge.cpp  lib-merge.h  merge-sort.cpp
cpp/algorithms/sorting/quick/: CMakeLists.txt  lib-quick.cpp  lib-quick.hpp  quick-sort.cpp
cpp/algorithms/sorting/radix/: CMakeLists.txt  lib-counting.cpp  lib-counting.hpp  lib-radix.cpp  lib-radix.hpp  radix-sort.cpp
cpp/algorithms/sorting/selection/: CMakeLists.txt  lib-select.cpp  lib-select.h  select-sort.cpp
cpp/algorithms/trees/: CMakeLists.txt
cpp/algorithms/trees/binary/: CMakeLists.txt  bst.cpp  bst.h  driver.cpp
cpp/algorithms/trees/redblack/: CMakeLists.txt  driver.cpp  redblack.cpp  redblack.h
cpp/catch2/: CMakeLists.txt
cpp/catch2/include/: klips.hpp  type_name.hpp
cpp/catch2/src/: CMakeLists.txt  klips.cpp  test_klips.cpp
cpp/catch2/test/: CMakeLists.txt  test_klips.cpp
cpp/cmake/: CMakeLists.txt
cpp/cmake-example/: CMakeLists.txt
cpp/cmake-example/apps/: CMakeLists.txt  say-hello.cpp
cpp/cmake-example/include/: lib-example.hpp
cpp/cmake-example/src/: CMakeLists.txt  lib-example.cpp  lib-klips.cpp
cpp/cmake/apps/: CMakeLists.txt
cpp/cmake/src/: CMakeLists.txt
cpp/cryptography/: CMakeLists.txt
cpp/cryptography/columnar-transposition/: CMakeLists.txt  driver.cpp  lib-cipher.cpp  lib-cipher.hpp
cpp/datastructs/: CMakeLists.txt  README.md
cpp/datastructs/binarysearchtree/: CMakeLists.txt  bst.cpp  bst.h  driver.cpp
cpp/datastructs/circledoublelist/: CMakeLists.txt  circledoublelist.cpp  circledoublelist.h
cpp/datastructs/circlesinglelist/: CMakeLists.txt  circlesinglelist.cpp
cpp/datastructs/doublelist/: CMakeLists.txt  doublelist.cpp  doublelist.h  driver.cpp
cpp/datastructs/maxheap/: CMakeLists.txt  driver.cpp  maxheap.cpp  maxheap.h
cpp/datastructs/queuelist/: CMakeLists.txt  driver.cpp  queuelist.cpp  queuelist.h
cpp/datastructs/singlelist/: CMakeLists.txt  driver.cpp  singlelist.cpp  singlelist.h
cpp/datastructs/stacklist/: CMakeLists.txt  Makefile  driver.cpp  stacklist.cpp  stacklist.h
cpp/datastructs/templates/: CMakeLists.txt  README.md
cpp/datastructs/templates/vector/: Makefile  (+4 more)
cpp/datastructs/vector/: CMakeLists.txt  driver.cpp  vector.cpp  vector.h
cpp/graphics/: CMakeLists.txt  README.md
cpp/graphics/opengl/: test-gl.cpp
cpp/graphics/opengl-cmake/: CMakeLists.txt
cpp/graphics/sdl-cmake/: CMakeLists.txt
cpp/multithreading/: CMakeLists.txt  README.md
cpp/multithreading/conditions/: CMakeLists.txt  driver.cpp
cpp/multithreading/deadlock/: CMakeLists.txt  driver.cpp
cpp/multithreading/livelock/: CMakeLists.txt  driver.cpp
cpp/multithreading/race-condition/: CMakeLists.txt  driver.cpp
cpp/opengl/: test-gl.cpp
cpp/opengl-cmake/: CMakeLists.txt
cpp/opengl-cmake/apps/: test-gl.cpp
cpp/opengl-cmake/src/: lib-opengl-test.hpp
cpp/opengl-invaders/: CMakeLists.txt
cpp/patterns/: CMakeLists.txt
cpp/patterns/abstract-factory/: CMakeLists.txt  abstract-factory.hpp  factory.cpp  main.cpp  parts.cpp  parts.hpp
cpp/patterns/adapter/: CMakeLists.txt  adapter.cpp  adapter.hpp  main.cpp
cpp/patterns/bridge/: CMakeLists.txt  abstraction.cpp  abstraction.hpp  implementation.cpp  implementation.hpp  main.cpp
cpp/patterns/factory/: CMakeLists.txt  abstract-factory.hpp  factory.cpp  main.cpp  parts.cpp  parts.hpp
cpp/patterns/observer/: CMakeLists.txt  main.cpp  observer.cpp  observer.hpp
cpp/patterns/prototype/: CMakeLists.txt  main.cpp  prototype.cpp  prototype.hpp
cpp/patterns/singleton/: CMakeLists.txt  main.cpp  singleton-pointer.cpp  singleton-pointer.hpp  singleton.cpp  singleton.hpp
cpp/patterns/state/: CMakeLists.txt  main.cpp  state.cpp  state.hpp
cpp/patterns/visitor/: CMakeLists.txt  main.cpp  visitor.cpp  visitor.hpp
cpp/qt/: CMakeLists.txt  README.md
cpp/qt/designer/: CMakeLists.txt  debugconsole.cpp  debugconsole.h  debugconsole.ui  designer.cpp  designer.h  designer.ui  main.cpp  texteditor.cpp  texteditor.h  texteditor.ui  treeview.cpp  treeview.h  treeview.ui
cpp/qt/designer-plugin/: CMakeLists.txt  main.cpp  text-view.cpp  text-view.h  widget-app.cpp  widget-app.h  widget-app.ui  widget-plugin.cpp  widget-plugin.h
cpp/qt/designer-plugin-collection/: CMakeLists.txt  app-dir.h  app-dir.h.in  main.cpp  textview.cpp  textview.h  treeview.cpp  treeview.h  widgetapp.cpp  widgetapp.h  widgetapp.ui  widgetplugin.cpp  widgetplugin.h  widgetplugincollection.cpp  widgetplugincollection.h
cpp/qt/slots/: CMakeLists.txt  main.cpp  slots-app.cpp  slots-app.h  text-view.h
cpp/sdl/: inherited.cpp
cpp/sdl-cmake/apps/: inherited.cpp  sdl-test.cpp
cpp/sdl-cmake/src/: lib-sdl-test.cpp
plates/cpp-datastruct/: CMakeLists.txt
plates/cpp-datastruct/apps/: CMakeLists.txt  driver.cpp
plates/cpp-datastruct/include/: lib-datastruct.h  lib-datastruct.h.in
plates/cpp-datastruct/src/: CMakeLists.txt  lib-datastruct.cpp
plates/cpp-sdl-cmake/: CMakeLists.txt
plates/cpp-sdl-cmake/apps/: inherited.cpp
plates/cpp-sdl-cmake/src/: lib-inherit.cpp  lib-inherit.h
(+265 files in other folders)
